# cursor-openai-compat-proxy

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: design-and-maintenance.md
src/cursor_openai_compat_proxy/: app.py  config.py  logging.py  main.py  proxy.py
tests/: test_healthz.py  test_proxy.py
