[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cursor-openai-compat-proxy"
version = "0.1.0"
description = "A minimal localhost proxy that rewrites Cursor's misplaced Responses-style requests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Maintainer" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
cursor-openai-compat-proxy = "cursor_openai_compat_proxy.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_openai_compat_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
